# crates-index-diff-rs

./: .clog.toml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  appveyor.yml  changelog.md
.github/workflows/: ci.yml  cron.yml  rust.yml
examples/: reproduce.rs
src/: crate_.rs  index.rs  lib.rs  types.rs  version.rs
src/index/: diff.rs  init.rs  mod.rs
src/index/diff/: delegate.rs  github.rs  mod.rs
tests/: baseline.rs  baseline_atomic.rs  crates-index-diff.rs  index.rs  version.rs
tests/fixtures/: .gitignore  make-index-from-parts.sh  make-index-parts.sh
tests/fixtures/generated-archives/: make-index-from-parts.tar.xz
tests/fixtures/index-parts/: commit.list  reproduce-#19.diff  reproduce-#19.msg  reproduce-#20.diff  reproduce-#20.msg  reproduce-#26-1.diff  reproduce-#26-1.msg  reproduce-#26-2.diff  reproduce-#26-2.msg  reproduce-#26-3.diff  reproduce-#26-3.msg  reproduce-#26-4.diff  reproduce-#26-4.msg  single-version-deletion.diff  single-version-deletion.msg
tests/index/: changes_between_commits.rs  changes_from_objects.rs  mod.rs  old.rs
tests/shared/: mod.rs
tests/version/: mod.rs
