[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Learn what's changed in the crates.io index"
documentation = "https://docs.rs/crates-index-diff"
keywords = ["crates", "index", "diff"]
license = "MIT"
name = "crates-index-diff"
repository = "https://github.com/Byron/crates-index-diff-rs"
version = "14.0.0"
edition = "2018"
readme = "changelog.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[lib]
test = false

[[test]]
name = "baseline"
path = "tests/baseline.rs"
required-features = ["max-performance"]

[[test]]
name = "baseline-atomic"
path = "tests/baseline_atomic.rs.rs"
required-features = ["max-performance"]

[features]
default = ["http-curl"]
## Configure `git-repository` to use maximum performance.
max-performance = ["git-repository/max-performance"]
## Use libcurl for all http/https interactions. Supports many git http settings, but needs a C toolchain to build.
http-curl = ["git-repository/blocking-http-transport-curl"]
## Use reqwest along with pure-rust TLS implementations. Needs no C toolchain, but might not be parity in features compared to curl.
http-reqwest = ["git-repository/blocking-http-transport-reqwest-rust-tls"]


[dependencies]
git-repository = { version = "0.29.0", default-features = false, features = ["max-performance-safe", "blocking-network-client"] }
serde = { version = "1", features = ["std", "derive"] }
hex = "0.4.3"
smartstring = "1.0.1"
serde_json = "1"
bstr = "1.0.1"
thiserror = "1.0.32"
ahash = "0.8.0"
hashbrown = { version = "0.13.1", features = ["raw"] }

[dev-dependencies]
git-testtools = "0.9.0"
crates-index = "0.18.11"
tempdir = "0.3.5"
