[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Learn what's changed in the crates.io index"
documentation = "https://docs.rs/crates-index-diff"
keywords = ["crates", "index", "diff"]
license = "MIT"
name = "crates-index-diff"
repository = "https://github.com/Byron/crates-index-diff-rs"
version = "28.0.0"
edition = "2018"
readme = "changelog.md"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[[test]]
name = "baseline"
path = "tests/baseline.rs"
required-features = ["max-performance"]

[[test]]
name = "baseline-atomic"
path = "tests/baseline_atomic.rs"
required-features = ["max-performance"]

[features]
default = ["http-curl"]
## Configure `gix` to use maximum performance, but with greater compatibility.
max-performance-safe = ["gix/max-performance-safe"]
## Configure `gix` to use maximum performance.
max-performance = ["gix/max-performance"]
## Use libcurl for all http/https interactions. Supports many git http settings, but needs a C toolchain to build.
http-curl = ["gix/blocking-http-transport-curl"]
## Use reqwest along with pure-rust TLS implementations. Needs no C toolchain, but might not be parity in features compared to curl.
http-reqwest = ["gix/blocking-http-transport-reqwest-rust-tls"]


[dependencies]
gix = { version = "0.72.1", default-features = false, features = ["blocking-network-client", "blob-diff", "revision"] }
serde = { version = "1", features = ["std", "derive"] }
hex = { version = "0.4.3", features = ["serde"] }
smartstring = { version = "1.0.1", features = ["serde"] }
serde_json = "1"
bstr = "1.0.1"
thiserror = "2"
ahash = "0.8.0"
hashbrown = { version = "0.16.0" }
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
gix-testtools = "0.15.0"
crates-index = { version = "3.0.0", default-features = false, features = ["git-performance", "git-https"] }
tempdir = "0.3.5"
